Added fields to get chromatogram to add to detail view. Fixed issue with GetInstrumentRun that arose because of extra functions added to Sample.  Require a status to save a run.  Small change to plate report. (mbowler)